k8s/apps/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    managed-by: argocd
    purpose: household-service
